Thu Jun 19 12:16:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_root): Give error on duplicate Root request.
	Call parse_config.
	* parseinfo.c, cvs.h (parse_config): New function.
	* cvs.h (CVSROOTADM_CONFIG): Added.
	* main.c (main): Set server_active here...
	* server.c (server): ...not here.  That seems cleaner than
	strcmp's between command_name and "server" in main.c.
	* main.c (main): Call parse_config.
	* main.c, cvs.h (free_Rcsbin): Make global.
	* mkmodules.c (filelist): Add CVSROOTADM_CONFIG.

Wed Jun 18 11:24:31 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.11.

	* Version 1.9.10.

Tue Jun 17 22:48:00 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Add --allow-root=ROOT argument; call
	root_allow_add for each time it is specified.  Call
	root_allow_free before exiting.
	* root.c, cvs.h (root_allow_add, root_allow_free, root_allow_ok):
	New function.
	* server.c (pserver_authenticate_connection): If root_allow_ok
	doesn't like the CVSROOT directory, don't allow access.

Tue Jun 17 14:30:14 1997  Jim Kingdon  (unknown@beezley)

	* client.c: Add "copyright" notice.  If NO_EXT_METHOD, omit
	start_rsh_method.
	* client.c (update_entries): Cast argument to MD5Update from
	char * to unsigned char *.

Mon Jun 16 16:46:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* run.c (piped_child, filter_stream_through_program):
	If USE_SETMODE_BINARY, then put the pipes into binary mode.
	* find_names.c, ignore.c, lock.c, wrapper.c: Change fnmatch to
	CVS_FNMATCH.
	* client.c (start_server): If NO_EXT_METHOD, then give a fatal
	error on any use of :ext:.

Sun Jun 15 22:30:27 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (toplevel): Match U CVSROOT/* lines with DOTSTAR in
	test toplevel-9.

Thu Jun 12 10:27:51 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (toplevel): Remove Emptydir before starting.
